# SpidarGPR

./: README.md  SpidarGPR.py  mock_nic500.py  pyproject.toml  test_spidar_gpr.py
src/spidar_gpr/: mock_nic500.py
tests/: conftest.py  test_spidar_gpr.py
