[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spidar-gpr"
version = "0.1.0"
description = "Python driver for the Spidar NIC-500 GPR in SDK mode"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU LGPL" }
keywords = ["gpr", "nic500", "radar", "geophysics", "spidar"]
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
# pip install spidar-gpr[testing]
testing = []

# pip install spidar-gpr[dev]  – everything a contributor needs
dev = [
    "pytest>=7",
    "pytest-timeout",
]

[project.urls]
Repository = "https://github.com/kylelevy/SpidarGPR"

# ── Package discovery ──────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
